--- a/features/n0tsszzz/impl/src/main/res/layout/content_n0tsszzz_content.xml
+++ b/features/n0tsszzz/impl/src/main/res/layout/content_n0tsszzz_content.xml
@@ -16,7 +16,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:textAppearance="?attr/textAppearanceHeadline6" />
+            style="@style/n0tsszzz_text_headline" />
 
         <TextView
             android:id="@+id/elapsed"
@@ -24,7 +24,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="8dp"
-            android:textAppearance="?attr/textAppearanceBody1" />
+            style="@style/n0tsszzz_text_body_primary" />
 
         <com.google.android.material.button.MaterialButtonToggleGroup
             android:id="@+id/buttons"
