--- a/features/n0tsszzz/impl/src/main/res/layout/item_n0tsszzz_record.xml
+++ b/features/n0tsszzz/impl/src/main/res/layout/item_n0tsszzz_record.xml
@@ -18,14 +18,14 @@
             android:id="@+id/current_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?attr/textAppearanceBody1" />
+            style="@style/n0tsszzz_text_body_primary" />
 
         <TextView
             android:id="@+id/elapsed_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
-            android:textAppearance="?attr/textAppearanceBody2" />
+            style="@style/n0tsszzz_text_body_secondary" />
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 
