--- a/features/demyanenko/impl/src/main/res/layout/item_f1car.xml
+++ b/features/demyanenko/impl/src/main/res/layout/item_f1car.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="16dp"
+    android:padding="12dp"
     android:layout_marginBottom="12dp">
 
     <ImageView
@@ -19,20 +19,22 @@
         android:id="@+id/f1carNameTv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
         android:gravity="center"
+        android:layout_marginBottom="8dp"
         android:textSize="24sp"
         android:textStyle="bold"
+        android:textColor="#87FF00"
         tools:text="RB21" />
 
     <TextView
         android:id="@+id/carSpeedTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
         android:gravity="center"
+        android:layout_marginBottom="8dp"
         android:textSize="14sp"
-        tools:text="Макс скорость: 370 км/ч" />
+        android:textColor="#87FF00"
+        tools:text="Макс скорость: 365 км/ч" />
 
     <com.google.android.material.chip.Chip
         android:id="@+id/phraseChip"
@@ -40,6 +42,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:visibility="gone"
-        tools:text="Aggressive driving"
+        tools:text="Sound"
         tools:visibility="visible" />
 </LinearLayout>
