--- a/features/n0tsszzz/impl/src/main/res/layout/content_n0tsszzz_content.xml
+++ b/features/n0tsszzz/impl/src/main/res/layout/content_n0tsszzz_content.xml
@@ -33,8 +33,8 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="16dp" />
 
-        <com.github.mikephil.charting.charts.LineChart
-            android:id="@+id/chart"
+        <FrameLayout
+            android:id="@+id/chart_container"
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:layout_marginTop="16dp" />
